<resources>

    <!-- Generales -->
    <string name="app_name">Pill Reminder</string>
    <string name="placeholder">Hello World!</string>
    <string name="settings">Ajustes</string>
    <string name="dialog_error_title">Error</string>

    <!-- Pantalla principal -->
    <string name="next_medication">Próxima medicación</string>
    <string name="empty_medications">No tiene medicaciones</string>

    <!-- Medicaciones -->
    <string name="adiro">Adiro</string>
    <string name="enantyum">Enantyum</string>
    <string name="eutirox">Eutirox</string>
    <string name="ibuprofeno">Ibuprofeno</string>
    <string name="nolotil">Nolotil</string>
    <string name="orfidal">Orfidal</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="sintrom">Sintrom</string>
    <string name="trankimazin">Trankimazin</string>
    <string name="ventolin">Ventolin</string>

    <!-- Adapter de medicaciones -->
    <string name="number_tablets_singular">%1$d comprimido</string>
    <string name="number_tablets_plural">%1$d comprimidos</string>
    <string name="date_from_to">Del %1$s al %2$s</string>
    <string name="date_from">Desde el %1$s</string>
    <string name="today">Hoy</string>
    <string name="tomorrow">Mañana</string>
    <string name="next_medication_time">%1$s a las %2$s</string>
    <string name="remaining_time">Quedan %1$s</string>

    <!-- Login -->
    <string name="mail_or_user">Correo o usuario</string>
    <string name="password">Contraseña</string>
    <string name="enter">Entrar</string>
    <string name="error_empty_field">El campo no puede estar vacío.</string>
    <string name="login_error">No se pudo hacer login.</string>
    <string name="login_error_unauthorized">Usuario o password incorrecto.</string>

    <!-- Mensajes de estados de conexión con la pulsera -->
    <string name="warning">¡Atención!</string>
    <string name="connected">Conectado</string>
    <string name="connecting">Conectando...</string>
    <string name="synchronizing_meds">Sincronizando medicación...</string>
    <string name="synchronization_successful">Sincronización completada.</string>
    <string name="synchronized_meds">Sincronización completada. Tomas sincronizadas: %1$d</string>
    <string name="scanning">Buscando dispositivo...</string>
    <string name="connecting_description">Dispositivo encontrado. Conectando...</string>
    <string name="not_connected">La pulsera no está conectada. Toque aquí para conectar.</string>
    <string name="error_enable_location_permission">Debe activar permisos localización. Toque aquí para ir a configuración.</string>
    <string name="enable_location_permission">Debe activar permisos localización.</string>
    <string name="error_enable_bluetooth">El bluetooth no está activado. Toca aquí para activarlo.</string>
    <string name="error_turn_on_location">La Ubicación está apagada. Toca aquí para activarla.</string>
    <string name="error_unknown">Error desconocido. Toca aquí para intentar conectar otra vez.</string>

    <!-- Main Activity buttons -->
    <string name="old_activity">Pantalla de pruebas</string>
    <string name="disconnect">Desconectar pulsera</string>
    <string name="logout">Cerrar sesión</string>
    <string name="sent_correctly">Toma de medicación enviada correctamente</string>

</resources>
