<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.MainActivity">

    <LinearLayout
        android:id="@+id/main_activity_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_activity_warning_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/warningBackground"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <TextView
                android:id="@+id/main_activity_warning_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/placeholder"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize23"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_activity_warning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:gravity="center"
                android:text="@string/placeholder"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSizeBig" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_activity_empty_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/empty_medications"
                android:textSize="@dimen/textSizeBig" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/main_activity_medication_list_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/margin_medium"
                        android:paddingBottom="@dimen/margin_small">

                        <ImageView
                            android:layout_width="@dimen/title_pill_icon_size"
                            android:layout_height="@dimen/title_pill_icon_size"
                            android:src="@drawable/pill_icon" />

                        <TextView
                            android:id="@+id/main_activity_medication_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/padding_medium"
                            android:text="@string/next_medication"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/textSize23" />

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/main_activity_medication_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/main_activity_old_activity_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:background="@drawable/selector_rounded_button_blue"
                        android:gravity="center"
                        android:paddingTop="@dimen/margin_small"
                        android:paddingBottom="@dimen/margin_small"
                        android:text="@string/old_activity"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textSizeBig"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/main_activity_disconnect_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:background="@drawable/selector_rounded_button_blue"
                        android:gravity="center"
                        android:paddingTop="@dimen/margin_small"
                        android:paddingBottom="@dimen/margin_small"
                        android:text="@string/disconnect"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textSizeBig" />

                    <TextView
                        android:id="@+id/main_activity_logout_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:background="@drawable/selector_rounded_button_blue"
                        android:gravity="center"
                        android:paddingTop="@dimen/margin_small"
                        android:paddingBottom="@dimen/margin_small"
                        android:text="@string/logout"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textSizeBig" />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>